# app.py
@@ -35,6 +35,9 @@ async def download_files():
     files, code = await handlers_files.get_files(db, tags=tags, file_types=file_types, directories=directories)
     file_ids = [file["_id"] for file in files]
 
+    if not file_ids:
+        return "No files found", 404
+
     return await handlers_files.download_files(file_ids, db, telegram, chunker)
 
 
@@ -76,7 +79,7 @@ async def get_files_ids():
 async def get_files():
     tags = request.args.getlist('tag')
     file_types = request.args.getlist('type')
-    directories = request.args.get('directories')
+    directories = request.args.getlist('directories')
 
     return await handlers_files.get_files(db, tags=tags, file_types=file_types, directories=directories)
 
@@ -93,7 +96,7 @@ async def patch_files():
 
     files, code = await handlers_files.get_files(db, tags=tags, file_types=file_types, directories=directories)
     file_ids = [file["_id"] for file in files]
-    return await handlers_files.patch_files(file_ids, db, new_tags=new_tags, new_directory=new_directory)
+    return await handlers_files.patch_files(file_ids, db, telegram, new_tags=new_tags, new_directory=new_directory)
 
 
 @app.route('/files/meta/tags', methods=['POST'])
@@ -107,7 +110,7 @@ async def add_tags_to_files():
 
     files, code = await handlers_files.get_files(db, tags=tags, file_types=file_types, directories=directories)
     file_ids = [file["_id"] for file in files]
-    return await handlers_files.add_tags_to_files(file_ids, db, tags_to_add)
+    return await handlers_files.add_tags_to_files(file_ids, db, tags_to_add, telegram)
 
 
 @app.route('/files/meta/tags', methods=['PATCH'])
@@ -121,7 +124,7 @@ async def remove_tags_in_files():
 
     files, code = await handlers_files.get_files(db, tags=tags, file_types=file_types, directories=directories)
     file_ids = [file["_id"] for file in files]
-    return await handlers_files.remove_tags_from_files(file_ids, db, tags_to_remove)
+    return await handlers_files.remove_tags_from_files(file_ids, db, tags_to_remove, telegram)
 
 
 @app.route('/files/meta/tags', methods=['DELETE'])
@@ -132,7 +135,7 @@ async def delete_all_tags_in_files():
 
     files, code = await handlers_files.get_files(db, tags=tags, file_types=file_types, directories=directories)
     file_ids = [file["_id"] for file in files]
-    return await handlers_files.delete_all_tags_from_files(file_ids, db)
+    return await handlers_files.delete_all_tags_from_files(file_ids, db, telegram)
 
 
 @app.route('/files/meta/directory', methods=['DELETE'])
@@ -143,7 +146,7 @@ async def delete_files_directory():
 
     files, code = await handlers_files.get_files(db, tags=tags, file_types=file_types, directories=directories)
     file_ids = [file["_id"] for file in files]
-    return await handlers_files.delete_files_directory(file_ids, db)
+    return await handlers_files.delete_files_directory(file_ids, db, telegram)
 
 
 @app.route('/files/<file_id>', methods=['GET'])
@@ -171,7 +174,7 @@ async def patch_file(file_id):
     new_tags = form.getlist("tags")
     new_directory = form.get("directory")
 
-    return await handlers_files.patch_file(file_id, db, new_tags=new_tags, new_directory=new_directory)
+    return await handlers_files.patch_file(file_id, db, telegram, new_tags=new_tags, new_directory=new_directory)
 
 
 @app.route('/files/<file_id>/meta/tags', methods=['POST'])
@@ -179,7 +182,7 @@ async def add_tags_to_file(file_id):
     form = await request.form
     tags_to_add = form.getlist("tags")
 
-    return await handlers_files.add_tags_to_file(file_id, db, tags_to_add)
+    return await handlers_files.add_tags_to_file(file_id, db, tags_to_add, telegram)
 
 
 @app.route('/files/<file_id>/meta/tags', methods=['PATCH'])
@@ -187,17 +190,140 @@ async def remove_tags_in_file(file_id):
     form = await request.form
     tags_to_remove = form.getlist("tags")
 
-    return await handlers_files.remove_tags_from_file(file_id, db, tags_to_remove)
+    return await handlers_files.remove_tags_from_file(file_id, db, tags_to_remove, telegram)
 
 
 @app.route('/files/<file_id>/meta/tags', methods=['DELETE'])
 async def delete_all_tags_in_file(file_id):
-    return await handlers_files.delete_all_tags_from_file(file_id, db)
+    return await handlers_files.delete_all_tags_from_file(file_id, db, telegram)
 
 
 @app.route('/files/<file_id>/meta/directory', methods=['DELETE'])
 async def delete_file_directory(file_id):
-    return await handlers_files.delete_file_directory(file_id, db)
+    return await handlers_files.delete_file_directory(file_id, db, telegram)
+
+
+@app.route('/directories', methods=['GET'])
+async def download_directories():
+    names = request.args.getlist('names')
+    parents = request.args.getlist('parents')
+    recursive = request.args.get('recursive')
+    
+    directories, code = await handlers_directories.get_directories(db, names=names, parents=parents, recursive=recursive)
+    directories_ids = [directory["_id"] for directory in directories]
+    
+    files, code = await handlers_files.get_files(db, directories=directories_ids)
+    files_ids = [file["_id"] for file in files]
+
+    return await handlers_files.download_files(files_ids, db, telegram, chunker)
+
+
+@app.route('/directories', methods=['POST'])
+async def create_directory():
+    form = await request.form
+    name = form.get("name")
+    parent = form.get("parent")
+    return await handlers_directories.create_directory(db, name, parent)
+
+
+@app.route('/directories', methods=['DELETE'])
+async def delete_directories():
+    names = request.args.getlist('names')
+    parents = request.args.getlist('parents')
+    recursive = request.args.get('recursive')
+
+    directories, code = await handlers_directories.get_directories(db, names=names, parents=parents, recursive=recursive)
+    directories_ids = [directory["_id"] for directory in directories]
+    return await handlers_directories.delete_directories(directories_ids, db, telegram)
+
+
+@app.route('/directories/id', methods=['GET'])
+async def get_directories_ids():
+    names = request.args.getlist('names')
+    parents = request.args.getlist('parents')
+    recursive = request.args.get('recursive')
+
+    directories, code = await handlers_directories.get_directories(db, names=names, parents=parents, recursive=recursive)
+    directories_ids = [directory["_id"] for directory in directories]
+
+    return directories_ids, 200
+
+
+@app.route('/directories/meta', methods=['GET'])
+async def get_directories():
+    names = request.args.getlist('names')
+    parents = request.args.getlist('parents')
+    return await handlers_directories.get_directories(db, names=names, parents=parents)
+
+
+@app.route('/directories/meta', methods=['PATCH'])
+async def patch_directories():
+    form = await request.form
+    names = request.args.getlist("names")
+    parents = request.args.getlist("parents")
+
+    new_name = form.get("name")
+    new_parent = form.get("parent")
+
+    directories, code = await handlers_directories.get_directories(db, names=names, parents=parents)
+    directories_ids = [directory["_id"] for directory in directories]
+    return await handlers_directories.patch_directories(directories_ids, db, telegram, new_name=new_name, new_parent=new_parent)
+
+
+@app.route('/directories/<directory_id>', methods=['GET'])
+async def download_directory(directory_id):
+    directories, code = await handlers_directories.get_directory(db, directory_id)
+    if code == 404:
+        return "Directory not found", 404
+
+    files, code = await handlers_files.get_files(db, directories=[directory_id])
+    files_ids = [file["_id"] for file in files]
+
+    return await handlers_files.download_files(files_ids, db, telegram, chunker)
+
+
+@app.route('/directories/<directory_id>', methods=['DELETE'])
+async def delete_directory(directory_id):
+    return await handlers_directories.delete_directory(directory_id, db, telegram)
+
+
+@app.route('/directories/<directory_id>/meta', methods=['GET'])
+async def get_directory(directory_id):
+    return await handlers_directories.get_directory(directory_id, db)
+
+
+@app.route('/directories/<directory_id>/meta', methods=['PATCH'])
+async def patch_directory(directory_id):
+    form = await request.form
+    new_name = form.get("new_name")
+    new_parent = form.get("new_parent")
+
+    return await handlers_directories.patch_directory(directory_id, db, telegram, new_name=new_name, new_parent=new_parent)
+
+
+@app.route('/directories/<directory_id>/meta/children', methods=['GET'])
+async def get_directory_children(directory_id):
+    recursive = request.args.get('recursive')
+
+    return await handlers_directories.get_directory_children(directory_id, db, recursive=recursive)
+
+
+@app.route('/directories/<directory_id>/meta/children', methods=['POST'])
+async def add_directory_children(directory_id):
+    form = await request.form
+    directories = form.getlist("directories")
+
+    return await handlers_directories.add_directory_children(directory_id, db, directories)
+
+
+@app.route('/directories/<directory_id>/meta/children', methods=['PUT'])
+async def remove_directory_children(directory_id):
+    form = await request.form
+    directories = form.getlist("directories")
+    recursive = request.args.get('recursive')
+
+    return await handlers_directories.remove_directory_children(directory_id, db, directories, recursive=recursive)
+
 
 
 if __name__ == '__main__':
